--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   go_router: ^17.0.0
   drift: ^2.29.0
   drift_flutter: ^0.2.7
+  sqlite3_flutter_libs: ^0.5.24
   path_provider: ^2.1.5
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
@@ -59,6 +60,7 @@ dev_dependencies:
   drift_dev: ^2.29.0
   freezed: ^3.2.3
   json_serializable: ^6.11.1
+  sqlite3: ^2.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
