--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  file_picker: ^8.0.3
+  image: ^4.2.0
+  image_picker: ^1.1.2
+  path: ^1.9.0
+  permission_handler: ^11.3.1
+  riverpod: ^3.0.3
   riverpod_annotation: ^3.0.3
   flutter_riverpod: ^3.0.3
   go_router: ^17.0.0
