--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,12 @@ dependencies:
   path_provider: ^2.1.5
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
+  crop_your_image: ^2.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  async: ^2.11.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
