--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   freezed_annotation: ^3.1.0
   json_annotation: ^4.9.0
   crop_your_image: ^2.0.0
+  gal: ^2.3.2
 
 dev_dependencies:
   flutter_test:
