--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   json_annotation: ^4.9.0
   crop_your_image: ^2.0.0
   gal: ^2.3.2
+  table_calendar: ^3.0.9
 
 dev_dependencies:
   flutter_test:
