--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   crop_your_image: ^2.0.0
   gal: ^2.3.2
   table_calendar: ^3.0.9
+  fl_heatmap: ^0.4.6
 
 dev_dependencies:
   flutter_test:
