--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   gal: ^2.3.2
   table_calendar: ^3.0.9
   fl_heatmap: ^0.4.6
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
